--- a/1.0.md
+++ b/1.0.md
@@ -1,1 +1,1 @@
-**[Bkebi 1.0 CN&OS](https://1drv.ms/u/s!AiSszT8xOt1shX3H5Z0MOP0tmjpa?e=v9qBUX)**
+**[Bkebi 1.0 CN&OS]((https://drive.google.com/file/d/1ZZyyrH4OcrlHa8vgV8b_vE_PQPgUv0bm/view?usp=share_link))**
