--- a/1.0.md
+++ b/1.0.md
@@ -1,1 +1,1 @@
-**[Bkebi 1.0 CN&OS]((https://drive.google.com/file/d/1ZZyyrH4OcrlHa8vgV8b_vE_PQPgUv0bm/view?usp=share_link))**
+**[Bkebi 1.0 CN&OS](https://drive.google.com/file/d/1ZZyyrH4OcrlHa8vgV8b_vE_PQPgUv0bm/view?usp=share_link)**
