--- a/1.1.1-Rerelease.md
+++ b/1.1.1-Rerelease.md
@@ -1,1 +1,1 @@
-**[Bkebi 1.1.1-Rerelease CN&OS](https://drive.google.com/file/d/1QIFdeG0_QXaNjY2lb6HO8SmjStc9MpYg/view?usp=sharing)**
+**[Bkebi 1.1.1-Rerelease CN&OS](https://cdn.discordapp.com/attachments/1072831171639115796/1081431605966557184/bkebi-1.1.1.1468-090bb977-rel.zip)**
